support synthetic ip in switch
1. support arp/ndp
2. support to ping
3. vni should be created by admin before being used